[project]
name = "pipelinerl"
version = "0.1.0"
description = "PipelineRL: Faster On-policy RL for Long Sequence Generation"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.6.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "pyyaml>=6.0",
    "accelerate>=0.30.0",
    "wandb>=0.25.1",
]

[project.scripts]
pipelinerl-train = "scripts.run:main"
pipelinerl-eval = "scripts.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelinerl", "scripts"]
